# ami-cpp-course-2024

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .testenv-beta-ci.yml  .testenv-ci.yml  CMakeLists.txt  README.md  SCORE.md  SETUP.md  build.docker  githuber  githuber.pub  testenv.docker
deadlines/: ami.yml  pmi.yml
tasks/admission/: admission.cpp
tasks/chocolate/: .tester.json  CMakeLists.txt  chocolate.cpp  chocolate.h  readme.md  test.cpp
tasks/fibonacci/: .tester.json  CMakeLists.txt  fibonacci.cpp  fibonacci.h  readme.md  test.cpp
tasks/image_processor/: CMakeLists.txt  bmp.cpp  bmp.h  cmdlineparser.cpp  cmdlineparser.h  image_processor.cpp  matrix.h  pipeline_factory.cpp  pipeline_factory.h  producer.cpp  producer.h  readme.md
tasks/image_processor/filters/: base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge.cpp  edge.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
tasks/is_leap/: .tester.json  CMakeLists.txt  is_leap.cpp  is_leap.h  readme.md  test.cpp
tasks/min_divisor/: .tester.json  CMakeLists.txt  min_divisor.cpp  min_divisor.h  readme.md  test.cpp
tasks/next_even/: .tester.json  CMakeLists.txt  next_even.cpp  next_even.h  readme.md  test.cpp
tasks/palindrome/: palindrome.cpp  readme.md  test.cpp
tasks/password/: password.cpp
tasks/provinces/: .tester.json  CMakeLists.txt  provinces.cpp  provinces.h  test.cpp
tasks/queue/: .tester.json  CMakeLists.txt  queue.cpp  queue.h  readme.md  test.cpp
tasks/rational/: .tester.json  CMakeLists.txt  rational.cpp  rational.h  readme.md  test.cpp
tasks/reduce_fraction/: .tester.json  CMakeLists.txt  readme.md  reduce_fraction.cpp  reduce_fraction.h  test.cpp
tasks/scorer/: readme.md  scorer.cpp
tasks/search/: search.cpp  test.cpp
tasks/stack/: .tester.json  (+4 more)
(+4 files in other folders)
